# xexamai

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_RU.md  SECURITY.md  electron-builder.yml  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json  vite.config.mts  wide-classes.min.css
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci-cd.yml  orcestr-repo-notifier.yml  release.yml
configs/: entitlements.mac.plist  postcss.config.js  tailwind.config.js  tailwind.config.js~
docs/: local-whisper.md  releases.md
scripts/: clean.js  create-linux-archive.js  sync-tauri-version.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_log.rs  audio.rs  auth.rs  config.rs  constants.rs  hotkeys.rs  local_speech.rs  main.rs  oauth.rs  ollama.rs  resources.rs  transcription.rs  tray.rs  types.rs  update.rs
src/main/: app.ts
src/main/ipc/: holder.ipc.ts  settings.ipc.ts  stt.ipc.ts
src/main/services/: app-config.service.ts  assistant.service.ts  config.service.ts  holder-auth.service.ts  hotkeys.service.ts  logger.service.ts  oauth.service.ts  retry.service.ts  timeout.config.ts  whisper-local.service.ts
src/main/shared/: types.ts
src/main/utils/: audioNormalizer.ts  errorFormatter.ts
src/main/windows/: MainWindow.ts  MainWindow.ts~
src/preload/: index.ts  index.ts~
src/preload/api/: assistant.ts  auth.ts  gemini.ts  google.ts  holder.ts  hotkeys.ts  logger.ts  loopback.ts  media.ts  screen.ts  settings.ts  windowControls.ts
src/renderer/: App.tsx  global.d.ts  index.html  main.tsx  renderer.ts  styles.css  types.ts  wide-classes.min.css
src/renderer/app/: audioSession.ts  fontSizeControls.ts  preloadBridge.ts  screenshotController.ts  streamController.ts
src/renderer/audio/: encoder.ts  encoder.ts~  pcmRingBuffer.ts  ringBuffer.ts  visualizer.ts
src/renderer/auth/: auth-context.tsx
src/renderer/bridge/: tauriApi.ts
src/renderer/hooks/: useSettings.ts
src/renderer/mui/: config.mui.tsx
src/renderer/services/: authClient.ts  browserAudioCapture.ts  geminiStreamingService.ts  googleStreamingService.ts  holderClient.ts  issuesClient.ts  localSpeechModels.ts  mediaClient.ts  nativeAssistant.helpers.ts  nativeAssistant.network.ts  nativeAssistant.ts  nativeAudio.ts  ollama.ts  systemAudioCapture.ts
src/renderer/state/: appState.ts  appState.ts~  holderState.ts  settingsStore.ts
src/renderer/styles/: toast.sass
src/renderer/ui/: controls.ts  featureAccessModal.tsx  holderAccess.ts  holderOnlyModal.css  holderOnlyModal.ts  holderOnlyModal.tsx  logoAnimation.ts  outputs.ts  outputs.ts~  portalRoot.tsx  settings.ts  settings.ts~  status.ts  stopButton.ts  waveform.ts  welcomeModal.ts  welcomeModal.tsx
src/renderer/utils/: errorFormatter.ts  featureAccess.ts  (+4 more)
src/shared/: appUrls.ts  constants.ts  errorTypes.js  ipc.ts
tasks/: 1.md
(+48 files in other folders)
